# stationAPIv3.3

./: .gitignore  CMakeLists.txt  README.md  build.xml
cmake/: FindMariaDBClient.cmake
extras/: init_database.sql  init_database_mariadb.sql  sqlite_to_mariadb_migrator.py  swgchat.cfg.dist
extras/migrations/mariadb/: V001__baseline.sql
extras/migrations/sqlite/: V001__baseline.sql
extras/systemd/: stationchat.service
src/stationapi/: CMakeLists.txt  Node.hpp
src/stationchat/: CMakeLists.txt  ChatAvatar.cpp  ChatAvatarService.cpp  ChatAvatarService.hpp  ChatRoom.cpp  ChatRoomService.cpp  ChatRoomService.hpp  Database.hpp  DatabaseBootstrap.cpp  DatabaseBootstrap.hpp  DatabaseFactory.cpp  DatabaseFactory.hpp  DatabaseMariaDb.cpp  DatabaseMariaDb.hpp  DatabaseSqlite.cpp  DatabaseSqlite.hpp  GatewayClient.cpp  GatewayClient.hpp  GatewayNode.cpp  GatewayNode.hpp  PersistentMessageService.cpp  PersistentMessageService.hpp  SqlParameterAdapter.cpp  SqlParameterAdapter.hpp  StationChatConfig.hpp  main.cpp
src/stationchat/policy/: PolicyDecision.hpp  PolicyEngine.cpp  PolicyEngine.hpp  PolicyEvent.hpp
src/stationchat/protocol/: Protocol.cpp
tests/: CMakeLists.txt
tests/stationapi/: DatabaseIdentifier_Tests.cpp
tests/stationchat/: EraseRemoveIfRegression_Tests.cpp
